--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,21 @@
                 margin: 0;
                 padding: 0;
                 overflow: hidden;
+                position: relative;
             }
             svg {
                 width: 100vw;
                 height: 100vh;
             }
+            #renderCanvas {
+                width: 100%;
+                height : 100%;
+                touch-action: none;
+            }
         </style>
     </head>
     <body>
-        <svg></svg>
-        
-        <script src="dist/bundle.js"></script>
+        <div id="output" style="height: 100%;"><canvas id="renderCanvas"></canvas></div>
+        <script src="bundle.js"></script>
     </body>
 </html>
